Update index.ejs with new code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -472,7 +472,7 @@ align-items: end;">
               </p>
             </div>
             <div class="card-content card-buttons">
-              <a href="" target="_blank">
+              <a href="https://github.com/bhasidhshaik/personal_website" target="_blank">
                 <button class="Btn">
                   <svg class="svgIcon" viewBox="0 0 496 512" height="1.4em" xmlns="http://www.w3.org/2000/svg">
                     <path
