Update index.ejs with adding poersonal site repository

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -450,7 +450,7 @@ align-items: end;">
           </div>
           <!-- =================Project 3======================= -->
           <div class="card" style="animation-delay: 1s;">
-            <div class="card-header project-showcase"></div>
+            <div class="card-header portfolio"></div>
             <div class="card-content card-content1">
               <h5 class="card-title">Personal Website</h5>
               <p class="card-text card-tech-used">
