update meta tags

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome to the online portfolio of Shaik Bhasidh. Explore a showcase of my work, skills, and experiences. I am a passionate [your profession] based in [your location]. Discover how I bring creativity and expertise to every project.">
+  <meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@sheikh_basidh">
+<meta name="twitter:creator" content="@sheikh_basidh">
+<meta name="twitter:url" content="https://bhasidh.onrender.com">
+<meta name="twitter:title" content="Shaik Bhasidh is a full stack web developer">
+<meta name="twitter:description" content="Shaik Bhasidh is full stack web developer with high skills">
+
+<meta property="og:title" content="Shaik Bhasidh: Fullstack developer">
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Shaik Bhasidh">
+<meta property="og:url" content="https://bhasidh.onrender.com">
+<meta property="og:description" content="Shaik Bhasidh is full stack web developer with high skills.">
+
+<meta property="og:image" content="https://bhasidh.onrender.com/img/abt-me.jpg">
+<meta property="og:image:width" content="200">
+<meta property="og:image:height" content="350">
+
+
   <meta name="theme-color" content="#42047e">
   <title>Shaik Bhasidh - Full Stack Developer</title>
   <link rel="stylesheet" href="css/style.css">
