--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to the online portfolio of Shaik Bhasidh. Explore a showcase of my work, skills, and experiences. I am a passionate [your profession] based in [your location]. Discover how I bring creativity and expertise to every project.">
+  <meta name="description" content="Welcome to the online portfolio of Shaik Bhasidh. Explore a showcase of my work, skills, and experiences. I am a passionate Web Developer based in Andhra Pradesh , India. Discover how I bring creativity and expertise to every project.">
   <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@sheikh_basidh">
 <meta name="twitter:creator" content="@sheikh_basidh">
